Removed collapsability from stats pane

--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -24,13 +24,9 @@
                         <div class="col">
                             <div class="hotstatus-subcontainer">
                                 <div class="">
-                                    <a
-                                            data-toggle="collapse"
-                                            data-target="#average_stats"
-                                            class="heroloader-toggle d-lg-none collapsed"></a>
                                     <span class="hl-stats-title">Average Stats</span>
                                 </div>
-                                <div id="average_stats" class="collapse">
+                                <div id="average_stats">
                                     <div class="">
                                         {% block group_average_stats %}{% endblock %}
                                     </div>
