Converted to using new player primary keys

--- a/app/Resources/views/default/playerSearch.html.twig
+++ b/app/Resources/views/default/playerSearch.html.twig
@@ -41,7 +41,7 @@
                                 <div class="hotstatus-subcontainer">
                                     {% for player in playerArr %}
                                         <div>
-                                            <a href="{{ path("player", {"id": player['id']}) }}" class="psearch-player">{{ player['name'] ~ "#" ~ player['tag'] }}</a>
+                                            <a href="{{ path("player", {"region": player['region'], "id": player['id']}) }}" class="psearch-player">{{ player['name'] ~ "#" ~ player['tag'] }}</a>
                                         </div>
                                     {% endfor %}
                                 </div>
