--- a/app/Resources/views/default/player.html.twig
+++ b/app/Resources/views/default/player.html.twig
@@ -14,6 +14,7 @@
 {# Inject dynamic content variables #}
 {% block dynamicVariables %}
     let player_id = {{ player.id }};
+    let player_region = {{ player.region_raw }};
     let image_bpath = "{{ asset('/', 'images')|raw }}";
 {% endblock %}
 
