--- a/app/Resources/views/default/rankings.html.twig
+++ b/app/Resources/views/default/rankings.html.twig
@@ -2,7 +2,7 @@
 
 {# Include snippets and then alias their blocks so as to order them as needed #}
 {% use ':snippets:stdassets.html.twig' with javascripts as stdjavascripts, stylesheets as stdstylesheets %}
-{# use ':snippets:rankings/rankingsloader.html.twig' with javascripts as rankingsloaderjavascripts #}
+{% use ':snippets:rankings/rankingsloader.html.twig' with javascripts as rankingsloaderjavascripts %}
 
 {# Append to title #}
 {% block title %}
@@ -31,12 +31,12 @@
         <div class="row">
             <div class="col-xl-2"></div>
             <div class="col-12 col-xl-8">
-                <div class="hotstatus-container">
+                {#<div class="hotstatus-container">
                     <div class="hotstatus-subcontainer contact-container">
                         Rankings are currently disabled to iron out some bugs, check back later!
                     </div>
-                </div>
-                {# embed ':snippets:rankings/rankingsloader.html.twig' %}
+                </div>#}
+                {%  embed ':snippets:rankings/rankingsloader.html.twig' %}
                     {% block javascripts %}{% endblock %}
                     {% block filter %}
                         <div>
@@ -45,7 +45,7 @@
                             {% include ':snippets:heroes/filter/dropdown/select/gameTypes.html.twig' %}
                         </div>
                     {% endblock %}
-                {% endembed #}
+                {% endembed %}
             </div>
             <div class="col-xl-2">
                 {% include ':snippets:advertising/responsive_vertical.html.twig' %}
@@ -62,7 +62,7 @@
 {# Javascript #}
 {% block javascripts %}
     {{ block('stdjavascripts') }}
-    {# block('rankingsloaderjavascripts') #}
+    {{ block('rankingsloaderjavascripts') }}
 {% endblock %}
 
 {# Tail Javascript #}
