Changed playerdata controller, views, and added edge to hero matchups

--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -34,11 +34,17 @@
                     <div class="hotstatus-subcontainer contact-container">
                         Hotstat.us is a web application with which you can view Heroes of the Storm statistics parsed from player-submitted replay files.
                         <br><br>
-                        View your favorite hero's stats, or visit your own personal player page to see your recent matches, hero and map statistics, and even approximated rankings for each league based on your region!
+                        View your favorite hero's stats, or visit your own personal player page to see your recent matches, hero and map statistics.
                         <br><br>
-                        Check back here in the future for any news regarding updates to the site!
+                        Check back here in the future for any news regarding updates to the site (a blog format is in the works)!
                         <br><br>
-                        Over <div class="d-inline-block"><h5>1,000,000</h5></div> replays have been processed for <div class="d-inline-block"><h5>880,000</h5></div> unique players since September 2017!
+                        Over <div class="d-inline-block"><h5>1,100,000</h5></div> replays have been processed for <div class="d-inline-block"><h5>910,000</h5></div> unique players since September 2017!
+                        <br><br>
+                        <h5>News (2017-12-20):</h5>
+                        <ul>
+                            <li>Rank displays for 2017 Season 3 had to be temporarily disabled due to a player reprocessing bug.</li>
+                            <li>Implemented Winrate Edge % to Hero Page Matchups.</li>
+                        </ul>
                     </div>
                 </div>
             </div>
