Added social integration

--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -38,11 +38,17 @@
                         <br><br>
                         Check back here in the future for any news regarding updates to the site (a blog format is in the works)!
                         <br><br>
-                        Over <div class="d-inline-block"><h5>1,100,000</h5></div> replays have been processed for <div class="d-inline-block"><h5>910,000</h5></div> unique players since September 2017!
+                        Over <div class="d-inline-block"><h5>1,220,000</h5></div> replays have been processed for <div class="d-inline-block"><h5>960,000</h5></div> unique players since September 2017!
                         <br><br>
+                        <h5>News (2017-12-21):</h5>
+                        <ul>
+                            <li>Updated date filter to include new 2.29.5 Balance Patch, cycling out oldest 2.27.3 Kel'thuzad patch.</li>
+                            <li>Added social media integration to allow for quick and easy sharing of specific hero and player pages! Share Hotstat.us with your friends!</li>
+                            <li>MMR Update: 2017 Season 3 Rank display will remain disabled for the time being. In the future a broader mmr calculation system will be implemented that will reprocess matches weekly, allowing for MMR approximations to be more accurate as time goes on.</li>
+                        </ul>
                         <h5>News (2017-12-20):</h5>
                         <ul>
-                            <li>Rank displays for 2017 Season 3 had to be temporarily disabled due to a player reprocessing bug.</li>
+                            <li>Rank displays for 2017 Season 3 had to be disabled due to a player reprocessing bug.</li>
                             <li>Implemented Winrate Edge % to Hero Page Matchups.</li>
                         </ul>
                     </div>
