--- a/app/Resources/views/default/player.html.twig
+++ b/app/Resources/views/default/player.html.twig
@@ -68,6 +68,9 @@
                     {% block advertising_horizontal_responsive_01 %}
                         {% include ':snippets:advertising/responsive_horizontal_inner.html.twig' %}
                     {% endblock %}
+                    {% block social_integration %}
+                        {% include ':snippets:social.html.twig' %}
+                    {% endblock %}
                 {% endembed %}
             </div>
             <div class="col-xl-2">
