--- a/app/Resources/views/default/playerhero.html.twig
+++ b/app/Resources/views/default/playerhero.html.twig
@@ -122,7 +122,10 @@
                         {% include ':snippets:advertising/responsive_horizontal_inner.html.twig' %}
                     {% endblock %}
                     {% block advertising_horizontal_responsive_02 %}
-                        {% include ':snippets:advertising/responsive_horizontal_inner_flex.html.twig' %}
+                        {# include ':snippets:advertising/responsive_horizontal_inner_flex.html.twig' #}
+                    {% endblock %}
+                    {% block social_integration %}
+                        {% include ':snippets:social.html.twig' %}
                     {% endblock %}
                 {% endembed %}
             </div>
