--- a/app/Resources/views/snippets/heroes/heroloader.html.twig
+++ b/app/Resources/views/snippets/heroes/heroloader.html.twig
@@ -55,6 +55,13 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="hotstatus-subcontainer">
+                                {% block social_integration %}{% endblock %}
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
