--- a/app/Resources/views/snippets/players/player_heroloader.html.twig
+++ b/app/Resources/views/snippets/players/player_heroloader.html.twig
@@ -38,6 +38,13 @@
                             </div>
                         </div>
                     </div>
+                    <div class="row">
+                        <div class="col">
+                            <div class="hotstatus-subcontainer">
+                                {% block social_integration %}{% endblock %}
+                            </div>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
