Added service announcements support

--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -31,6 +31,9 @@
             <div class="col-xl-2"></div>
             <div class="col-12 col-xl-8">
                 <div class="hotstatus-container">
+                    <div class="headsup-announcement">
+                        Service Announcement: Hotstatus is currently migrating to a new database and cloud provider, recently uploaded replays will not be processed until after migration is complete.
+                    </div>
                     <div class="hotstatus-subcontainer contact-container">
                         Hotstat.us is a web application with which you can view Heroes of the Storm statistics parsed from player-submitted replay files.
                         <br><br>
