--- a/app/Resources/views/snippets/players/playerloader.html.twig
+++ b/app/Resources/views/snippets/players/playerloader.html.twig
@@ -6,6 +6,11 @@
 <div id="playerloader-container" class="container-fluid hotstatus-container padding-top-7">
     <div class="row">
         <div class="col">
+            {% block announcement %}{% endblock %}
+        </div>
+    </div>
+    <div class="row">
+        <div class="col">
             {# Top Row #}
             {% block filter %}{% endblock %}
         </div>
