--- a/app/Resources/views/default/player.html.twig
+++ b/app/Resources/views/default/player.html.twig
@@ -38,9 +38,9 @@
                 {% embed ':snippets:players/playerloader.html.twig' %}
                     {% block javascripts %}{% endblock %}
                     {% block announcement %}
-                        <div class="headsup-announcement">
+                        {#<div class="headsup-announcement">
                             Service Announcement: Hotstatus is currently migrating to a new database and cloud provider, recently uploaded replays will not be processed until after migration is complete.
-                        </div>
+                        </div>#}
                     {% endblock %}
                     {% block player_tab_index %}
                         {% include ':snippets:players/player_tab_index.html.twig' %}
