--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -43,6 +43,10 @@
                         <br><br>
                         Over <div class="d-inline-block"><h5>1,220,000</h5></div> replays have been processed for <div class="d-inline-block"><h5>960,000</h5></div> unique players since September 2017!
                         <br><br>
+                        <h5>News (2017-12-22):</h5>
+                        <ul>
+                            <li>All rankings are disabled while new reprocessing technique is worked on.</li>
+                        </ul>
                         <h5>News (2017-12-21):</h5>
                         <ul>
                             <li>Updated date filter to include new 2.29.5 Balance Patch, cycling out oldest 2.27.3 Kel'thuzad patch.</li>
