Switched to using new player and team mmr scheme

--- a/app/Resources/views/snippets/navigation.html.twig
+++ b/app/Resources/views/snippets/navigation.html.twig
@@ -15,9 +15,9 @@
             <li class="nav-item">
                 <a class="nav-link nav-stopwordwrap {{ (route == 'hero') ? 'active' }}" href="{{ path('talents') }}">Talents</a>
             </li>
-            {#<li class="nav-item">
+            <li class="nav-item">
                 <a class="nav-link nav-stopwordwrap {{ (route == 'rankings') ? 'active' }}" href="{{ path('rankings') }}">Rankings</a>
-            </li>#}
+            </li>
         </ul>
         <ul class="navbar-nav">
             <li class="nav-item nav-md-hideitem">
