--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1250,6 +1250,12 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     height:100%;
 }
 
+.recentmatch-simplewidget-outline-container-compact {
+    position: relative;
+    width:100%;
+    height:100%;
+}
+
 .recentmatch-simplewidget-leftpane {
     /*background-color: #162C7E*/;
     background-repeat: no-repeat;
@@ -1589,6 +1595,19 @@ https://github.com/silviomoreto/bootstrap-select/issues/1135
     height: 76px;
     text-align: center;
     padding-top: 50px;
+    color: #38464b;
+    cursor:pointer;
+}
+
+.recentmatch-simplewidget-inspect-compact {
+    background-color: #1c2223;
+    position: absolute;
+    left:676px;
+    top:0px;
+    width: 40px;
+    height: 38px;
+    text-align: center;
+    padding-top: 25px;
     color: #38464b;
     cursor:pointer;
 }
