Began working on actual toggling of match widgets for compact view, finalizing the control panel design

--- a/app/Resources/views/snippets/players/playerloader.html.twig
+++ b/app/Resources/views/snippets/players/playerloader.html.twig
@@ -55,7 +55,7 @@
                     </div>
                 </div>
             </div>
-            <div class="row">
+            <div class="social-pane row">
                 <div class="col">
                     <div class="hotstatus-subcontainer">
                         {% block social_integration %}{% endblock %}
