Completed recentmatches compact view and control panel implemenation

--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -52,6 +52,12 @@
                             <li>Blog Format for news page.</li>
                         </ul>
                         <hr/>
+                        <h5>News (2018-01-03):</h5>
+                        <ul>
+                            <li>Implemented Control Panel to Player Page Recent Matches.</li>
+                            <li>Control panel contains: a graphical winrate for currently loaded recent matches, social share buttons, a convenient 'load more matches' button, and a toggle for a compact view mode.</li>
+                            <li>Compact view displays the currently loaded recent matches in a much more vertically compacted view with less graphics. (Based on a feature request)</li>
+                        </ul>
                         <h5>News (2018-01-01):</h5>
                         <ul>
                             <li>Happy New Year!</li>
@@ -82,7 +88,7 @@
                         <h5>News (2017-12-20):</h5>
                         <ul>
                             <li>Rank displays for 2017 Season 3 had to be temporarily disabled due to a player reprocessing bug.</li>
-                            <li>Implemented Winrate Edge % to Hero Page Matchups.</li>
+                            <li>Implemented Winrate Edge % to Hero Page Matchups. (Based on a feature request)</li>
                         </ul>
                     </div>
                 </div>
