Updated for blaze patch

--- a/app/Resources/views/default/news.html.twig
+++ b/app/Resources/views/default/news.html.twig
@@ -59,6 +59,10 @@
                             <li>Blog Format for news page.</li>
                         </ul>
                         <hr/>
+                        <h5>News (2018-01-09):</h5>
+                        <ul>
+                            <li>Updated filters to include new 2.29.7 Blaze Patch, cycling out oldest 2.27.5 Balance patch.</li>
+                        </ul>
                         <h5>News (2018-01-03):</h5>
                         <ul>
                             <li>Implemented Control Panel to Player Page Recent Matches.</li>
